Fix menu item wrapping and crowding the chevron icon

--- a/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
@@ -48,7 +48,7 @@
     }
     &__link-text {
       flex: 1 0 auto;
-      max-width: calc(100% - 12px);
+      max-width: 100%;
     }
     &__divider {
       display: block;
@@ -63,6 +63,7 @@
       transition: transform var(--timing-quick) ease;
       &::before {
         margin-right: 0;
+        margin-left: var(--spacing-xs);
       }
       &.is-open {
         transform: rotate(90deg);
